# turtle-snake-game

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  TODOS.md  example.env  pyproject.toml
snake_game/: config.py  food.py  main.py  scoreboard.py  snake.py  typings.py
